src/test/ui/rfc1598-generic-associated-types/generic-associated-types-where.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/generic-associated-types-where.rs:32:32
   |
32 |     type WithDefault<'a, T> = &'a Iterator<T>;
   |                                ^^ undeclared lifetime

error: aborting due to previous error

